Created `dot` subcommand to transpile graphql to dot code Improved parsing algorithm Enhancements to tests Added `dot` subcommand documentation to README.md